[gd_scene load_steps=6 format=3 uid="uid://buwir5nwab5xr"]

[ext_resource type="FontFile" uid="uid://bun2qosgr1yav" path="res://Assets/UI/Fonts/Swiss 721 Extended Bold.otf" id="1_5wsvm"]
[ext_resource type="Script" uid="uid://b0yrwkretq2u0" path="res://Scripts/UI/main_menu.gd" id="1_i2xx2"]
[ext_resource type="PackedScene" uid="uid://dcs5ofc5qadex" path="res://Scenes/UI/settings_menu.tscn" id="3_o14dv"]
[ext_resource type="AudioStream" uid="uid://c65bsu2spn68c" path="res://Assets/SFX/UI/button-2.mp3" id="4_u7lva"]
[ext_resource type="AudioStream" uid="uid://cfygh06i4xr1r" path="res://Assets/Music/title_screen.mp3" id="5_mrfpk"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i2xx2")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="label_Title" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 200)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5wsvm")
theme_override_font_sizes/font_size = 64
text = "BERIAL MISION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_Play" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 64)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_5wsvm")
theme_override_font_sizes/font_size = 64
text = "PLAY"

[node name="btn_Options" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 64)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_5wsvm")
theme_override_font_sizes/font_size = 64
text = "OPTIONS"

[node name="btn_Exit" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 64)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_5wsvm")
theme_override_font_sizes/font_size = 64
text = "EXIT"

[node name="SettingsMenu" parent="." instance=ExtResource("3_o14dv")]
visible = false
layout_mode = 1

[node name="btn_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_u7lva")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mrfpk")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="CenterContainer/VBoxContainer/btn_Play" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/btn_Options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/btn_Exit" to="." method="_on_btn_exit_pressed"]
